Create category News

--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,7 +1,4 @@
-@import url("../css/fontawesome.min.css");
-@import url("../css/fa-brands.css");
-@import url("../css/fa-regular.css");
-@import url("../css/fa-solid.css");
+@import url("../css/fontawesome-all.min.css");
 @import url("../css/animate.min.css");
 @import url("../css/bootstrap.min.css");
 @import url("../css/bootstrap-select.min.css");
