--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -13900,7 +13900,7 @@ be a descendant of the grid when it is being dragged.
 
 .treeview.is-expanded [data-toggle='treeview'] {
   border-left-color: #009688;
-  background: #0d1214;
+  background: #153c4c;
 }
 
 .treeview.is-expanded .treeview-menu {
