--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,9 +1,9 @@
-@import url("../css/fontawesome-all.min.css");
-@import url("../css/animate.min.css");
-@import url("../css/bootstrap.min.css");
-@import url("../css/bootstrap-select.min.css");
-@import url("../css/jquery-ui.css");
-@import url("../css/jquery.ptTimeSelect.css");
+@import url("../fontawesome.css");
+@import url("animate.min.css");
+@import url("bootstrap.min.css");
+@import url("bootstrap-select.min.css");
+@import url("jquery-ui.css");
+@import url("jquery.ptTimeSelect.css");
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700|Source+Sans+Pro:400,600,700");
 body {
   line-height: 1.4;
