--- a/resources/assets/css/main_admin.css
+++ b/resources/assets/css/main_admin.css
@@ -1314,7 +1314,6 @@ pre code {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 50%;
             flex: 0 0 50%;
-    max-width: 50%;
   }
   .col-lg-7 {
     -webkit-box-flex: 0;
@@ -5644,6 +5643,7 @@ button.close {
   background-color: transparent;
   border: 0;
   -webkit-appearance: none;
+  outline:none;
 }
 
 .modal-open {
