--- a/public/main_admin/css/style.css
+++ b/public/main_admin/css/style.css
@@ -13578,6 +13578,8 @@ be a descendant of the grid when it is being dragged.
 .line-head {
   padding-bottom: 10px;
   border-bottom: 1px solid #ddd;
+  margin-bottom: 30px;
+  font-size: 18px;
 }
 
 /*----- Componant: Top Navigation Bar ----- */
@@ -15314,6 +15316,14 @@ be a descendant of the grid when it is being dragged.
 
 .circle-icon i {
   color: #009688;
+}
+
+.accordion .card {
+  margin-bottom: 5px;
+}
+
+.accordion .card-body {
+  border-bottom: 1px solid #ddd;
 }
 
 .gu-mirror{position:fixed!important;margin:0!important;z-index:9999!important;opacity:.8;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";filter:alpha(opacity=80)}.gu-hide{display:none!important}.gu-unselectable{-webkit-user-select:none!important;-moz-user-select:none!important;-ms-user-select:none!important;user-select:none!important}.gu-transit{opacity:.2;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";filter:alpha(opacity=20)}
