--- a/public/css/site/style.css
+++ b/public/css/site/style.css
@@ -1,9 +1,9 @@
-@import url("../fontawesome.css");
-@import url("animate.min.css");
-@import url("bootstrap.min.css");
-@import url("bootstrap-select.min.css");
-@import url("jquery-ui.css");
-@import url("jquery.ptTimeSelect.css");
+@import url("../../main_theme/css/fontawesome.css");
+@import url("../../main_theme/css/animate.min.css");
+@import url("../../main_theme/css/bootstrap.min.css");
+@import url("../../main_theme/css/bootstrap-select.min.css");
+@import url("../../main_theme/css/jquery-ui.css");
+@import url("../../main_theme/css/jquery.ptTimeSelect.css");
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700|Source+Sans+Pro:400,600,700");
 body {
   line-height: 1.4;
