--- a/public/main_admin/css/style.css
+++ b/public/main_admin/css/style.css
@@ -14322,7 +14322,7 @@ be a descendant of the grid when it is being dragged.
 .tile .tile-footer {
   border-top: 1px solid #ddd;
   padding: 20px 0 0 0;
-  margin-top: 10px;
+  margin-top: 30px;
 }
 
 /* Custom Checkbox and Radio Buttons */
@@ -15326,4 +15326,22 @@ be a descendant of the grid when it is being dragged.
   border-bottom: 1px solid #ddd;
 }
 
+.title-center {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  align-items:center;
+}
+
+.checkbox-left {
+  margin-right: 15px;
+  margin-bottom: 0;
+}
+
+.list-items-container {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
 .gu-mirror{position:fixed!important;margin:0!important;z-index:9999!important;opacity:.8;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";filter:alpha(opacity=80)}.gu-hide{display:none!important}.gu-unselectable{-webkit-user-select:none!important;-moz-user-select:none!important;-ms-user-select:none!important;user-select:none!important}.gu-transit{opacity:.2;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";filter:alpha(opacity=20)}
