--- a/resources/assets/css/main_admin.css
+++ b/resources/assets/css/main_admin.css
@@ -14322,7 +14322,7 @@ be a descendant of the grid when it is being dragged.
 .tile .tile-footer {
   border-top: 1px solid #ddd;
   padding: 20px 0 0 0;
-  margin-top: 10px;
+  margin-top: 30px;
 }
 
 /* Custom Checkbox and Radio Buttons */
@@ -15324,4 +15324,23 @@ be a descendant of the grid when it is being dragged.
 
 .accordion .card-body {
   border-bottom: 1px solid #ddd;
+}
+
+.title-center {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  align-items:center;
+}
+
+.checkbox-left {
+  margin-right: 15px;
+  margin-bottom: 0;
+}
+
+.list-items-container {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
