--- a/public/vali-admin/css/style.css
+++ b/public/vali-admin/css/style.css
@@ -15353,3 +15353,9 @@ be a descendant of the grid when it is being dragged.
   flex-wrap: wrap;
   padding-top: 15px;
 }
+
+.card .collapse-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
