--- a/public/vali-admin/css/style.css
+++ b/public/vali-admin/css/style.css
@@ -15359,3 +15359,17 @@ be a descendant of the grid when it is being dragged.
   align-items: center;
   justify-content: space-between;
 }
+
+[data-toggle="collapse"]:before {
+  display: inline-block;
+  content: "\f105";
+  font-family: Font Awesome\ 5 Free;
+  font-weight:900;
+  transition: all linear 0.25s;
+  transform: rotate(90deg);
+  margin-right: 10px;
+}
+
+[data-toggle="collapse"].collapsed:before {
+  transform: rotate(0deg);
+}
