--- a/public/miracle/css/style.css
+++ b/public/miracle/css/style.css
@@ -492,7 +492,7 @@ p.fontsize-lg {
 }
 
 .custom-font3, .post-slider.style4 .caption.size-lg, .parallax .caption.size-lg, #header .logo, #nav > ul > li > a, .mobile-nav, .error404 .error-message-404 span, .coming-soon-page .error-message-404 span, .blank-page .error-message-404 span, .coming-soon-page .clock, .page-loading-wrapper header .logo {
-    font-family: Dosis;
+    font-family: Roboto;
 }
 
 /* 1.2. Layout ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
