--- a/public/miracle/css/style.css
+++ b/public/miracle/css/style.css
@@ -12035,3 +12035,9 @@ body.woocommerce select:not(.default-style) + .customSelect .customSelectInner:b
 .slider-with-title {
     margin-top: 30px;
 }
+
+.widget-blog-img {
+    width: 370px;
+    height: 185px;
+    object-fit: cover;
+}
