--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,6 @@
 
 // Bootstrap
 //@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+
+@import "~jquery-ui/themes/base/datepicker.css";
+@import "~dragula/dist/dragula.min.css";
