--- a/public/miracle/css/style.css
+++ b/public/miracle/css/style.css
@@ -4115,14 +4115,14 @@ ul.filter-categories > li li:last-child {
     font-size: 1.6667em;
     text-transform: uppercase;
     font-weight: 600;
-    background-image: url("../images/logo/skin1/logo.png");
+    background-image: url("../images/logo.png");
     background-repeat: no-repeat;
     margin-bottom: 0;
 }
 
 @media all and (-webkit-min-device-pixel-ratio: 1.5), all and (-o-min-device-pixel-ratio: 3 / 2), all and (min--moz-device-pixel-ratio: 1.5), all and (min-device-pixel-ratio: 1.5) {
     #header .logo {
-        background-image: url("../images/logo/skin1/logo@2x.png");
+        background-image: url("../images/logo@2x.png");
         background-size: 25px 26px;
     }
 }
