--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,3 +10,4 @@
 
 @import "~jquery-ui/themes/base/datepicker.css";
 @import "~dragula/dist/dragula.min.css";
+@import "~jquery-ui/themes/base/all.css";
