--- a/public/miracle/css/custom.css
+++ b/public/miracle/css/custom.css
@@ -3,9 +3,11 @@
  * Author:  http://themeforest.net/user/soaptheme 
  */
 #hotel-features article img.custom_amenity {
-  margin-top: 5px;
-  margin-right: 5px;
-  opacity: 0.7; }
+    margin-top: 5px;
+    margin-right: 5px;
+    opacity: 0.7;
+}
 
 #hotel-features article img.custom_amenity:hover {
-  opacity: 1; }
+    opacity: 1;
+}
