Added Order Payment

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,3 +11,4 @@
 @import "~jquery-ui/themes/base/datepicker.css";
 @import "~dragula/dist/dragula.min.css";
 @import "~jquery-ui/themes/base/all.css";
+@import "~@fortawesome/fontawesome-free/css/all.css";
