--- a/resources/assets/css/vali-admin.css
+++ b/resources/assets/css/vali-admin.css
@@ -239,7 +239,6 @@ th {
 label {
   display: inline-block;
   margin-bottom: 0.5rem;
-  height: 32px;
 }
 
 button {
@@ -15398,4 +15397,8 @@ table .icon {
   bottom: auto;
   z-index: 1;
   display: block;
+}
+
+.label-group {
+  height: 40px;
 }
